refactor(get-environment): removed production restriction from get environment response data
